// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Cordial's upsertOrder destination action: all fields 1`] = `
Object {
  "anonymousId": "5)FqhW#w85$",
  "items": Array [
    Object {
      "category": "5)FqhW#w85$",
      "imageUrl": "5)FqhW#w85$",
      "itemPrice": -17352532573552.64,
      "manufacturerName": "5)FqhW#w85$",
      "name": "5)FqhW#w85$",
      "productID": "5)FqhW#w85$",
      "properties": Object {
        "testType": "5)FqhW#w85$",
      },
      "qty": -1735253257355264,
      "sku": "5)FqhW#w85$",
      "url": "5)FqhW#w85$",
    },
  ],
  "orderID": "5)FqhW#w85$",
  "properties": Object {
    "testType": "5)FqhW#w85$",
  },
  "purchaseDate": "2021-02-01T00:00:00.000Z",
  "segmentId": "5)FqhW#w85$",
  "segmentIdKey": "5)FqhW#w85$",
  "status": "5)FqhW#w85$",
  "totalAmount": -17352532573552.64,
  "userIdentities": Object {
    "testType": "5)FqhW#w85$",
  },
}
`;

exports[`Testing snapshot for Cordial's upsertOrder destination action: required fields 1`] = `
Object {
  "items": Array [
    Object {
      "name": "5)FqhW#w85$",
      "productID": "5)FqhW#w85$",
      "sku": "5)FqhW#w85$",
    },
  ],
  "orderID": "5)FqhW#w85$",
  "purchaseDate": "2021-02-01T00:00:00.000Z",
  "segmentIdKey": "5)FqhW#w85$",
  "status": "5)FqhW#w85$",
  "totalAmount": -17352532573552.64,
}
`;
